                              |_|                               |___/
##########################################################################################

##########################################################################################
##### Omega Theme
##########################################################################################
Informational:  http://himer.us/omega960
Project Page:   http://drupal.org/project/omega
Issue Queue:    http://drupal.org/project/issues/omega
Usage Stats:    http://drupal.org/project/usage/omega
Twitter:        http://twitter.com/Omeglicon
Maintainer(s):  
                Jake Strawn 
                  http://himerus.com
                  http://developmentgeeks.com
                  http://facebook.com/developmentgeeks
                  http://drupal.org/user/159141
                  http://twitter.com/himerus
                Sebastian Siemssen
                  http://twitter.com/thefubhy
                  http://drupal.org/user/761344
##########################################################################################
##### CHANGELOG.txt
##########################################################################################

CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-3.0-beta1
##### Pending changes for Next Release
########################################################################################## 

##########################################################################################
##### Changes in: 7.x-3.0-beta1
########################################################################################## 

6/09/12
=========
#1183482  - Increase the weight of the starterkits default stylesheets so they are able
to override the built-in Omega and Alpha stylesheets. Also setting the Alpha stylesheets
to a weight of -20.